[package]
name = "copy-double-buffered"
version = "0.1.0"
edition = "2024"
author = "shimun <shimun@shimun.net>"

[dependencies]
embassy-futures = "0.1.2"
embedded-io-async = { version = "0.7.0", optional = true }

[features]
default = [ "embedded-io-async" ]
std = []
embedded-io-async = ["dep:embedded-io-async"]

[dev-dependencies]
embedded-io-async = { version = "0.7.0", features = ["std"] }
tokio = { version = "1.48.0", features = ["macros", "test-util"] }
